Path del socket server actualizado

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
     ></script>
 
     <script>
-      const socketClient = io("http://localhost:8080");
+      const socketClient = io("https://react-socket-server-jmg.herokuapp.com/");
       const formulario = document.querySelector("#miFormulario");
       const mensajes = document.querySelector("#misMensajes");
       const txtMensaje = document.querySelector("#txtMensaje");
